[package]
name = "kill_em_all"
version = "0.1.0"
authors = ["Shirshak <8097377+shirshak55@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psutil = "1.7.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1